<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.androidbootcamp.myfinalproject.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/txtTitle"
        android:textSize="36sp"
        android:gravity="center_horizontal" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/txtAmount"
        android:layout_below="@+id/txtTitle"
        android:layout_centerHorizontal="true"
        android:hint="@string/txtAmount" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/txtYears"
        android:layout_below="@+id/txtRate"
        android:layout_centerHorizontal="true"
        android:hint="@string/txtYears" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnCalc"
        android:textSize="22sp"
        android:text="@string/btnCalc"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/txtGoal"
        android:layout_below="@+id/txtYears"
        android:layout_centerHorizontal="true"
        android:hint="@string/txtGoal" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/txtRate"
        android:layout_below="@+id/txtAmount"
        android:layout_alignLeft="@+id/txtGoal"
        android:layout_alignStart="@+id/txtGoal"
        android:hint="@string/txtRate" />

</RelativeLayout>
